[project]
name = "ibind"
version = "0.1.10-rc2"
authors = [
    { name="Voy Zan", email="voy1982@yahoo.co.uk" },
]
description = "IBind is a REST and WebSocket client library for Interactive Brokers Client Portal Web API."
readme = "README.md"
requires-python = ">=3.8"
license={ file = "LICENSE" }
dependencies = [
    "requests==2.31.*",
    "websocket-client==1.7.*"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords=['interactive brokers', 'rest api', 'python api', 'ibkr python api', 'ibkr web api', 'ib api', 'ibkr api', 'algo trading', 'algorithmic trading', 'quant', 'trading']

[project.optional-dependencies]
oauth = [
    'certifi>=2024.12.14',
    'charset-normalizer~=3.4',
    'idna~=3.10',
    'pycryptodome~=3.19.0',
    'python-dotenv==1.0.0',
    'urllib3~=2.3',
]

[project.urls]
Homepage = "https://github.com/Voyz/ibind"

[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"