[project]
name = "ibind"
version = "0.1.16"
authors = [
    { name="Voy Zan", email="voy1982@yahoo.co.uk" },
]
description = "IBind is a REST and WebSocket client library for Interactive Brokers Client Portal Web API."
readme = "README.md"
requires-python = ">=3.8"
license-files=["LICENSE"]
dependencies = [
    "requests>=2.31",
    "websocket-client>=1.7"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords=['interactive brokers', 'rest api', 'python api', 'ibkr python api', 'ibkr web api', 'ib api', 'ibkr api', 'algo trading', 'algorithmic trading', 'quant', 'trading']

[project.optional-dependencies]
oauth = [
    'pycryptodome>=3.21',
    'urllib3>=2.3',
]

[project.urls]
Homepage = "https://github.com/Voyz/ibind"

[tool.ruff.lint]
# Defined rules here:
# https://docs.astral.sh/ruff/rules/
select = [
    "F", # pyflakes
    "E", # pycodestyle - Errors
    "W", # pycodestyle - Warnings
    "S", # Security
    "N", # pep8-naming
    "PL", # pylint
]

ignore = [
    "E501",  # Ignore line length errors
    "E712", # Ignore true-false-comparison
    "PLR2004", # Ignore Pylint rule Magic Values
    "PLW1508", # Ignore Environment variable default type
    "PLR0913", # Too many arguments # TODO: Remove this once we have refactored the code
    "PLR0915", # Too many statements # TODO: Remove this once we have refactored  the code
    "PLR0912", # Too many branches # TODO: Remove this once we have refactored the code
    "PLW0603" # Global vars # TODO: Remove this once we have refactored the code
]

[tool.ruff]
line-length = 150

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"
